# radar-gui

./: .gitignore  LICENSE  README.md  pyproject.toml
arduino/: my_custom_radar.ino
src/radar_gui/: app.py  audio_warning.py  cli.py  demo_source.py  display.py  models.py  serial_source.py
tests/: test_audio_warning.py  test_models.py  test_serial_parsing.py
