[project]
name = "radar-gui"
version = "0.1.0"
description = "A retro green sweeping radar display for an Arduino ultrasonic SODAR station"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Cameron Rulten" }]
dependencies = [
    "click>=8.1",
    "pygame>=2.6",
    "pyserial>=3.5",
]

[project.scripts]
radar-gui = "radar_gui.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar_gui"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
